[gd_scene load_steps=3 format=3 uid="uid://bdelo0t3mgh2x"]

[ext_resource type="Theme" uid="uid://deh8vycc4uksh" path="res://themes_fonts/default_theme_small.tres" id="1"]
[ext_resource type="Script" path="res://subscenes/tournament/map_pool_editor.gd" id="2"]

[node name="MapPoolEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(-625, -483)
theme = ExtResource("1")
script = ExtResource("2")

[node name="MapPoolHeader" type="Label" parent="."]
layout_mode = 2
text = "Map pool"
horizontal_alignment = 1

[node name="MapPool" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MapChoice" type="MenuButton" parent="."]
layout_mode = 2
text = "Add map"
flat = false

[connection signal="about_to_popup" from="MapChoice" to="." method="_on_map_choice_about_to_popup"]
